styles.css
.boc-podcast-title-container {
    padding: 2px;
    margin: 1px 1px 2px 1px;
    display: flex;
    align-items: flex-start;
    flex-direction: row;
    text-decoration: none;
}

.boc-podcast-title-container:hover .boc-title, .boc-podcast-title-container:focus .boc-title {
    color: #c26717;
}

.boc-title {
    margin: 3px 0 0 5px;
    text-transform: uppercase;
    color: #333;
    cursor: pointer;
    display: inline-block;
}

.boc-podcast-title-container img {
    width: 44px;
    margin-top: 6px;
    display: inline-block;
    vertical-align: top
}

.boc-title:after {
    content: attr(data-episode-count);
    display: block;
    font-size: 12px;
    margin: 0 0 3px 0;
    color: #666;
}

.boc-episode-container {
    overflow: auto;
    max-height: 400px;
    margin-bottom: 10px;
    border: #ccc 1px solid;
    border-radius: 1px;
    padding: 2px 2px 3px 2px;
    display: block;
}

.boc-collapsed-episode-container {
    max-height: 0;
    overflow: hidden;
    margin-bottom: 0;
    border-color: transparent;
    padding: 0;
    display: none;
}

.boc-podcast-container {
    display: flex;
    margin-bottom: 1rem;
}

.boc-podcast-art-container {
    flex: .2;
    min-width: 20%;
}

.boc-podcast-art {
    width: 100%;
}

.boc-episodes-container {
    flex: .8;
    max-width: 80%;
    padding-left: 1rem;
}

.boc-episodes-container .art {
    display: none;
}

.boc-episodes-container .episodecell {
    margin-bottom: .5rem;
    height: auto;
}

.boc-episodes-container .episodecell:last-child {
    margin-bottom: 0;
}

.boc-episodes-container .cellcontent {
    position: static;
    width: auto;
    height: auto;
}

.boc-episodes-container .titlestack {
    transform: none;
    top: 0;
}

.boc-episodes-container .title {
    white-space: normal;
}

.pure-u-1.pure-u-sm-3-5 {
    width: 80%;
}

.boc-podcast-title {
    color: #333;
    margin-top: 0;
    margin-bottom: .5rem;
}

.boc-podcast-title.loading {
    text-indent: .4rem;
    color: #cacaca;
    background: linear-gradient(270deg, #fff, #f4f4f4, #fff);
    background-size: 400% 400%;
    -webkit-animation: boc-loading-animation 4s ease infinite;
    -moz-animation: boc-loading-animation 4s ease infinite;
    animation: boc-loading-animation 4s ease infinite;
}

@-webkit-keyframes boc-loading-animation {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

@-moz-keyframes boc-loading-animation {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

@keyframes boc-loading-animation {
    0% {
        background-position: 0% 50%
    }
    50% {
        background-position: 100% 50%
    }
    100% {
        background-position: 0% 50%
    }
}

